syntax = "proto3";

option go_package = "./proto";

package proto;


message LoginReq {
  string Email = 1;
  string Password = 2;
}

message TokenResponse {
  string Token = 1;
}
service AuthService {
  rpc LoginMerchant(LoginReq) returns (TokenResponse);
  rpc LoginCustomer(LoginReq) returns (TokenResponse);
}
