syntax = "proto3";

option go_package = "./proto";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Customer {
  int64 ID = 1;
  string Name = 2;
  string Email = 3;
  string Password = 4;
  google.protobuf.Timestamp CreatedAt = 5;
  google.protobuf.Timestamp UpdatedAt = 6;
}

message CustomerCreateReq {
  string Name = 1;
  string Email = 2;
  string Password = 3;
}

message CustomerUpdateReq {
  int64 ID = 1;
  string Name = 2;
  string Email = 3;
  string Password = 4;
  QueryData Query = 5;
}

message CustomerID {
  int64 ID = 1;
}

message CustomerEmail {
  string Email = 1;
}

message DeleteReq {
  int64 ID = 1;
  QueryData Query = 2;
}

enum Role{
  MERCHANT = 0;
  CUSTOMER = 1;
}

message QueryData {
  int64 MerchantID = 1;
  Role Role = 2 ;
}

service CustomerService {
  rpc FindOneByID(CustomerID) returns (Customer);
  rpc FindOneByEmail(CustomerEmail) returns (Customer);
  rpc FindAll(google.protobuf.Empty) returns (stream Customer);
  rpc Create(CustomerCreateReq) returns (Customer);
  rpc Update(CustomerUpdateReq) returns (Customer);
  rpc Delete(DeleteReq) returns (google.protobuf.Empty);
}
